[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "Speeltuinen_langs_snelweg/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["Speeltuinen_langs_snelweg"]

[project]
name = "Speeltuinen_langs_snelweg"
version = "0.0.1"
description = "Speeltuinen langs de snelweg"
readme = "README.md"
license = {text = "GNU-GPL V3"}
authors = [
  { name = "Guy Dupuits"},
  { name = "David Haasnoot"},
]

dependencies = [
  "numpy",
  "pydantic"
]

[project.urls]
Documentation = "https://hkv-products-services.github.io/Speeltuinen_langs_snelweg"
Source = "https://github.com/HKV-products-services/Speeltuinen_langs_snelweg"
