[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "restspots/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["restspots"]

[project]
name = "restspots"
version = "0.0.1"
description = "Find highway rest stops with playgrounds and export them for Google Maps (Speeltuinen langs de snelweg)"
readme = "README.md"
license = {text = "GNU-GPL V3"}
authors = [
  { name = "Guy Dupuits"},
  { name = "David Haasnoot"},
]

dependencies = [
  "geopandas",
  "shapely",
  "pyproj",
  "pandas",
  "requests",
  "pyyaml",
  "simplekml",
  "osm2geojson",
  "pydantic",
]

[project.scripts]
restspots = "restspots.pipeline:main"

[project.urls]
Documentation = "https://hkv-products-services.github.io/Speeltuinen_langs_snelweg"
Source = "https://github.com/HKV-products-services/Speeltuinen_langs_snelweg"
